--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 12.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Chande Momentum Strategy (Rules & Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 12.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5796,7 +5796,7 @@
                         <div class="video-info">
                             <h3>Chande Momentum Strategy (Rules & Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
